crates/analytics/tests/compile_fail/suggestor_cannot_emit_fact.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/suggestor_cannot_emit_fact.rs:11:13
   |
11 |         id: "injected".to_string(),
   |             ^^^^^^^^^^^^^^^^^^^^^^ expected `FactId`, found `String`
   |
help: call `Into::into` on this expression to convert `String` into `FactId`
   |
11 |         id: "injected".to_string().into(),
   |                                   +++++++

error: cannot construct `Fact` with struct literal syntax due to private fields
  --> tests/compile_fail/suggestor_cannot_emit_fact.rs:9:16
   |
 9 |     let fact = Fact {
   |                ^^^^
10 |         key: ContextKey::Seeds,
   |         ---------------------- private field
   |
   = note: ...and other private fields `promotion_record` and `created_at` that were not provided

error[E0308]: mismatched types
  --> tests/compile_fail/suggestor_cannot_emit_fact.rs:14:32
   |
14 |     AgentEffect::with_proposal(fact)
   |     -------------------------- ^^^^ expected `ProposedFact`, found `Fact`
   |     |
   |     arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/crates/pack/src/effect.rs
   |
   |     pub fn with_proposal(proposal: ProposedFact) -> Self {
   |            ^^^^^^^^^^^^^
